[package]
name = "historical-data"
version = "0.1.0"
authors = ["Cory Buecker <cory.buecker@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
futures = "0.3"
handlebars = "3.4.0"
env_logger = "0.7.1"
serde = { version="1.0.115", features = ["derive"] }
log = "0.4.11"

